--- a/cc_web_s25/index.html
+++ b/cc_web_s25/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <p>
-      the truth is out there
+      "But to feel nothing so as not to feel anything - what a waste!"
     </p>
-    <img id="sky" src="https://live.staticflickr.com/2702/4465318125_12da11ce7f_b.jpg" alt="photo of the northern lights"> 
+       - Andre Aciman, Call me By Your Name
+    </p>
+    <img id="still" src="https://i.pinimg.com/originals/a7/44/08/a7440809b883457243fc0dc80c5023ea.jpg" alt="cmbyn still"> 
 
       <!--"Northern Lights, Tromso" by GuideGunnar - Arctic Norway is licensed with CC BY-SA 2.0.
       "Mars Attacks Flying Saucers Martians Invasion 8566" by Brechtbug is licensed with CC BY-NC-ND 2.0.
