--- a/cc_web_s25/index.html
+++ b/cc_web_s25/index.html
@@ -8,16 +8,21 @@
   </head>
   <body>
     <p>
-      "But to feel nothing so as not to feel anything - what a waste!"
+      <i> "But to feel nothing so as not to feel anything - what a waste!" </i>
     </p>
        - Andre Aciman, Call me By Your Name
     </p>
     <img id="still" src="https://i.pinimg.com/originals/a7/44/08/a7440809b883457243fc0dc80c5023ea.jpg" alt="cmbyn still"> 
 
-      <!--"Northern Lights, Tromso" by GuideGunnar - Arctic Norway is licensed with CC BY-SA 2.0.
-      "Mars Attacks Flying Saucers Martians Invasion 8566" by Brechtbug is licensed with CC BY-NC-ND 2.0.
-      To view a copy of this license, visit
-        https://creativecommons.org/licenses/by-sa/2.0/ -–>
+      <!--"Call Me By Your Name" by Sony Pictures Classics is licensed with CC BY-NC-ND 2.0.
+       To view a copy of this license, visit
+       https://creativecommons.org/licenses/by-nc-nd/2.0/ -–>
 
   </body>
+       </p>
+       </p>
+      Katie Coughlan's Creative Coding Portfolio!
+       </p>
+      <i> "You can't use up creativity. The more you use, the more you have." </i>
+       - Maya Angelou
 </html>
