--- a/cc_web_s25/index.html
+++ b/cc_web_s25/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+   Katie Coughlan's Creative Coding Portfolio!
+    <p>
+     I use coding to bring creative ideas to life, blending tech with art to create unique digital experiences. 
+    <p>
+     My work explores how light, color, and motion can come together in new and exciting ways.
+    <p> 
+     Through interactive design, I aim to spark emotions and make people think differently about the digital world around them.
+    <p>
     <p>
       <i> "But to feel nothing so as not to feel anything - what a waste!" </i>
     </p>
@@ -21,8 +29,8 @@
   </body>
        </p>
        </p>
-      Katie Coughlan's Creative Coding Portfolio!
-       </p>
       <i> "You can't use up creativity. The more you use, the more you have." </i>
        - Maya Angelou
+       <p>
+   [(http://www.patience-is-a-virtue.org/)]
 </html>
