--- a/cc_web_s25/index.html
+++ b/cc_web_s25/index.html
@@ -29,7 +29,7 @@
        To view a copy of this license, visit
        https://creativecommons.org/licenses/by-nc-nd/2.0/ -–>
 
-  </body>
+  <body>
        </p>
        </p>
       <p>
@@ -38,4 +38,5 @@
        <p>
    [(http://www.patience-is-a-virtue.org/)]
        <p>
+  </body>
 </html>
