--- a/cc_web_s25/index.html
+++ b/cc_web_s25/index.html
@@ -37,7 +37,7 @@
       <i> "You can't use up creativity. The more you use, the more you have." </i>
        - Maya Angelou
        <p>
-   [(http://www.patience-is-a-virtue.org/)]
+   [Click Me!](http://www.patience-is-a-virtue.org/)
        <p>
   </body>
 </html>
