--- a/cc_web_s25/index.html
+++ b/cc_web_s25/index.html
@@ -24,7 +24,7 @@
     </p>
        - Andre Aciman, Call me By Your Name
     </p>
-     [(http://www.patience-is-a-virtue.org/)]
+       [Click Me!](http://www.patience-is-a-virtue.org/)
     </p>
     <img id="still" src="https://i.pinimg.com/originals/a7/44/08/a7440809b883457243fc0dc80c5023ea.jpg" alt="cmbyn still"> 
 
