--- a/cc_web_s25/index.html
+++ b/cc_web_s25/index.html
@@ -38,7 +38,7 @@
       <i> "You can't use up creativity. The more you use, the more you have." </i>
        - Maya Angelou
        <p>
-   [Click Me!](http://www.patience-is-a-virtue.org/)
+  <a> [Click Me!](http://www.patience-is-a-virtue.org/) </a>
        <p>
   </body>
 </html>
