--- a/cc_web_s25/index.html
+++ b/cc_web_s25/index.html
@@ -25,7 +25,7 @@
        - Andre Aciman, Call me By Your Name
     </p>
     <p>
-  <a> [Click Me!](https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExajZnbnp5c2t6dzEwMmM0MW4xa2I3M3dlZXI4Znl1YzdsNmhsNHhycyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oKIPsx2VAYAgEHC12/giphy.gif) </a>
+  Click [HERE](https://youtu.be/tOXszq1-rxs?si=Ro0faFt2NplP7yXb).
     </p>
     <img id="still" src="https://i.pinimg.com/originals/a7/44/08/a7440809b883457243fc0dc80c5023ea.jpg" alt="cmbyn still"> 
 
