--- a/cc_web_s25/index.html
+++ b/cc_web_s25/index.html
@@ -25,7 +25,7 @@
        - Andre Aciman, Call me By Your Name
     </p>
     <p>
-  Click [HERE](https://youtu.be/tOXszq1-rxs?si=Ro0faFt2NplP7yXb).
+<a href=https://www.youtube.com/watch?v=tOXszq1-rxs>Click Me</a>    
     </p>
     <img id="still" src="https://i.pinimg.com/originals/a7/44/08/a7440809b883457243fc0dc80c5023ea.jpg" alt="cmbyn still"> 
 
